--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "@nuxtjs/axios": "^5.6.0",
+    "axios": "^0.19.0",
     "nuxt": "^2.0.0",
     "vuedraggable": "^2.20.0"
   },
